--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 
 [dependencies]
 clap = "2.32.0"
+log = "0.4"
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 bitflags = { version = "1.2.1" }
 num-traits = "0.2"
 num-derive = "0.3"
+lazy_static = "1.4.0"
