--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ bitflags = { version = "1.2.1" }
 num-traits = "0.2"
 num-derive = "0.3"
 lazy_static = "1.4.0"
+peg = "0.6.2"
+
+[profile.test]
+opt-level = 3
